[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
dependencies = [
  "aiosqlite>=0.20.0",
  "fastapi[all]>=0.114.0",
  "greenlet>=3.0.3",
  "sqlalchemy>=2.0.34",
]
description = "FastAPI Book Sample"
license = {text = "Apache-2.0"}
name = "fastapi_book_sample"
readme = "README.md"
requires-python = ">=3.12"
version = "0.2.0"

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "pytest-randomly>=3.15.0",
]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = ["A002", "B008", "E501"]
select = [
  "F", # Pyflakes https://docs.astral.sh/ruff/rules/#pyflakes-f
  "E", # pycodestyle Error https://docs.astral.sh/ruff/rules/#error-e
  "W", # pycodestyle Warning https://docs.astral.sh/ruff/rules/#warning-w
  "C90", # mccabe https://docs.astral.sh/ruff/rules/#mccabe-c90
  "I", # isort https://docs.astral.sh/ruff/rules/#isort-i
  "N", # pep8-naming https://docs.astral.sh/ruff/rules/#pep8-naming-n
  "UP", # pyupgrade https://docs.astral.sh/ruff/rules/#pyupgrade-up
  "YTT", # flake8-2020 https://docs.astral.sh/ruff/rules/#flake8-2020-ytt
  "B", # flake8-bugbear https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
  "A", # flake8-builtins https://docs.astral.sh/ruff/rules/#flake8-builtins-a
  "RUF", # Ruff-specific rules https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
